[gd_scene load_steps=20 format=3 uid="uid://b1h362qd6htpc"]

[ext_resource type="Texture2D" uid="uid://rrjqe0p3g7l3" path="res://icon.svg" id="1_7c8vw"]
[ext_resource type="Script" path="res://scenes/Gwen.gd" id="1_djdrq"]
[ext_resource type="Script" path="res://scenes/room.gd" id="1_ntj1u"]
[ext_resource type="Texture2D" uid="uid://ch0tk31kjeuig" path="res://assets/geeksneak-Sheet.png" id="1_x4t0o"]
[ext_resource type="Script" path="res://scenes/Console.gd" id="2_aisin"]
[ext_resource type="Script" path="res://scenes/ConsoleGame.gd" id="3_luxfa"]
[ext_resource type="FontFile" uid="uid://xs2fw1d21j10" path="res://assets/fonts/Kenney Pixel Square.ttf" id="4_tyjew"]
[ext_resource type="LabelSettings" uid="uid://d5eo0h06301v" path="res://src/pixel_label_settings.tres" id="8_ehd6q"]
[ext_resource type="PackedScene" uid="uid://d0dv01foylsbd" path="res://src/menubutton.tscn" id="8_entav"]

[sub_resource type="Animation" id="Animation_6mr3n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(735, -254)]
}

[sub_resource type="Animation" id="Animation_ucna6"]
resource_name = "enter_room"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(735, -254), Vector2(507, 178)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e11hx"]
_data = {
"RESET": SubResource("Animation_6mr3n"),
"enter_room": SubResource("Animation_ucna6")
}

[sub_resource type="Animation" id="Animation_tccmu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(490, 1127)]
}

[sub_resource type="Animation" id="Animation_6yumb"]
resource_name = "hide"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(490, 490), Vector2(490, 1127)]
}

[sub_resource type="Animation" id="Animation_iuotx"]
resource_name = "unhide"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(490, 1127), Vector2(490, 490)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uihcl"]
_data = {
"RESET": SubResource("Animation_tccmu"),
"hide": SubResource("Animation_6yumb"),
"unhide": SubResource("Animation_iuotx")
}

[sub_resource type="LabelSettings" id="LabelSettings_m7kok"]
font = ExtResource("4_tyjew")
font_size = 64

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d62ml"]
bg_color = Color(0.054902, 0.219608, 0.180392, 0.921569)

[sub_resource type="LabelSettings" id="LabelSettings_hdlci"]
font = ExtResource("4_tyjew")
font_size = 64

[node name="Room" type="Node2D"]
script = ExtResource("1_ntj1u")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(500, 500)
zoom = Vector2(0.9, 0.9)

[node name="Countdown" type="Timer" parent="."]
wait_time = 200.0
autostart = true

[node name="Gwen" type="Node2D" parent="."]
position = Vector2(735, -254)
script = ExtResource("1_djdrq")

[node name="Sprite2D" type="Sprite2D" parent="Gwen"]
scale = Vector2(3.5625, 3.5625)
texture = ExtResource("1_7c8vw")

[node name="Timer" type="Timer" parent="Gwen"]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gwen"]
libraries = {
"": SubResource("AnimationLibrary_e11hx")
}

[node name="Console" type="Sprite2D" parent="."]
position = Vector2(490, 1127)
texture = ExtResource("1_x4t0o")
hframes = 3
vframes = 2
frame = 1
script = ExtResource("2_aisin")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Console"]
libraries = {
"": SubResource("AnimationLibrary_uihcl")
}

[node name="Minigame" type="Node2D" parent="Console"]
position = Vector2(-49, 147)
script = ExtResource("3_luxfa")

[node name="Control" type="Control" parent="Console/Minigame"]
layout_mode = 3
anchors_preset = 0
offset_left = -196.0
offset_top = -294.0
offset_right = 294.0
offset_bottom = 98.0

[node name="ProgressBar" type="ProgressBar" parent="Console/Minigame/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.0
offset_top = 98.0
offset_right = 252.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Console/Minigame/Control"]
layout_mode = 0
offset_top = 98.0
offset_right = 490.0
offset_bottom = 197.0
text = "paused!!"
label_settings = SubResource("LabelSettings_m7kok")
horizontal_alignment = 1

[node name="Ticker" type="Timer" parent="Console/Minigame"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 980.0
offset_bottom = 980.0

[node name="CountdownDisplay" type="Label" parent="Control"]
layout_mode = 0
offset_left = 742.0
offset_top = 40.0
offset_right = 853.0
offset_bottom = 118.0
text = "000"
label_settings = ExtResource("8_ehd6q")
horizontal_alignment = 1

[node name="DefeatOverlay" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/DefeatOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Panel" type="Panel" parent="Control/DefeatOverlay/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d62ml")

[node name="Label" type="Label" parent="Control/DefeatOverlay"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -341.0
offset_top = 40.0
offset_right = 355.0
offset_bottom = 139.0
grow_horizontal = 2
text = "You were caught!
"
label_settings = SubResource("LabelSettings_hdlci")
horizontal_alignment = 1

[node name="Menu" parent="Control/DefeatOverlay" instance=ExtResource("8_entav")]
layout_mode = 0
offset_left = 149.0
offset_top = 441.0
offset_right = 857.0
offset_bottom = 545.0
text = "-- Main Menu --"

[connection signal="timeout" from="Countdown" to="." method="_on_countdown_timeout"]
[connection signal="timeout" from="Gwen/Timer" to="Gwen" method="_on_timer_timeout"]
[connection signal="game_won" from="Console" to="." method="_on_console_game_won"]
[connection signal="game_won" from="Console/Minigame" to="Console" method="_on_minigame_game_won"]
[connection signal="timeout" from="Console/Minigame/Ticker" to="Console/Minigame" method="_on_timer_timeout"]
[connection signal="button_down" from="Control/DefeatOverlay/Menu" to="." method="return_to_main"]
